--- a/Riego_Ionic/src/app/components/dispositivo.component.html
+++ b/Riego_Ionic/src/app/components/dispositivo.component.html
@@ -35,7 +35,7 @@
       <ng-template #loading>
           <div style="width:100%; text-align:center">
             <img src="assets/images/empty.png" style="width:10rem;height:10rem;"/>
-            <p>No existen dispositivos conectados</p>
+            <p><span appDirResalta>existen dispositivos conectados</span></p>
           </div>
       </ng-template>      
     </div>
